kubernetes-manifests/delayed-job-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/bbnavi-datahub-postgresql: "true"
    io.kompose.network/bbnavi-redis-server: "true"
    io.kompose.service: delayed-job
  name: delayed-job
spec:
  containers:
    - args:
        - bin/delayed_job
        - run
      image: ghcr.io/citygo-es/citygo-datahub:master
      name: delayed-job
      ports:
        - containerPort: 3000
          protocol: TCP
      resources: {}
      volumeMounts:
        - mountPath: /unicorn
          name: unicorn
        - mountPath: /assets
          name: assets
  restartPolicy: OnFailure
  volumes:
    - name: unicorn
      persistentVolumeClaim:
        claimName: unicorn
    - name: assets
      persistentVolumeClaim:
        claimName: assets
status: {}
