kubernetes-manifests/tile-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: tile-server
  name: tile-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tile-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/bbnavi-datahub-postgresql: "true"
        io.kompose.network/public: "true"
        io.kompose.service: tile-server
    spec:
      containers:
        - args:
            - martin
            - --config
            - /martin_config.yml
          image: registry.gitlab.tpwd.de/tpwd/bb-navi/datahub:tileserver
          name: tile-server
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
