kubernetes-manifests/bbnavi-datahub-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: bbnavi-datahub-postgresql
  name: bbnavi-datahub-postgresql
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: bbnavi-datahub-postgresql
status:
  loadBalancer: {}
